fix image gallery displays image too small to see (Alex's fix)

--- a/docroot/_diffs/css/globe-common.css
+++ b/docroot/_diffs/css/globe-common.css
@@ -187,3 +187,10 @@ input[type="checkbox"] {
 #portlet_privacy-policy ul {
 	margin-left: 20px !important;
 }
+
+img {
+
+        max-width: inherit;
+
+        height: inherit;
+}
